PLY/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    CHARACTER
    DIVIDE_EQUAL
    DO
    FILE
    IN
    MINUS_EQUAL
    MODULE
    MODULE_EQUAL
    NEW
    NINT
    NUINT
    PLUS_EQUAL
    STRING
    THEN
    TIMES_EQUAL
    ULONG
    USHORT
    VAR

Grammar

Rule 0     S' -> program
Rule 1     program -> usings namespace class
Rule 2     program -> namespace class
Rule 3     usings -> using usings
Rule 4     usings -> using
Rule 5     using -> USING CLASSOBJECT SEMICOLON
Rule 6     namespace -> NAMESPACE CLASSOBJECT SEMICOLON
Rule 7     class -> modifier CLASS CLASSOBJECT block
Rule 8     class -> modifier STATIC CLASS CLASSOBJECT block
Rule 9     object_access -> ID DOT ID
Rule 10    object_access -> CLASSOBJECT DOT CLASSOBJECT
Rule 11    object_access -> ID DOT CLASSOBJECT
Rule 12    object_access -> CLASSOBJECT DOT ID
Rule 13    block -> LBRACKET body RBRACKET
Rule 14    body -> lines SEMICOLON
Rule 15    body -> lines SEMICOLON body
Rule 16    body -> if
Rule 17    body -> loop
Rule 18    body -> function
Rule 19    lines -> assignment
Rule 20    lines -> expression
Rule 21    lines -> declaration
Rule 22    lines -> return
Rule 23    names -> ID
Rule 24    names -> CLASSOBJECT
Rule 25    function -> modifier data_type names LPAREN declarations RPAREN block
Rule 26    function -> modifier VOID names LPAREN declarations RPAREN block
Rule 27    function -> modifier STATIC data_type names LPAREN declarations RPAREN block
Rule 28    function -> modifier STATIC VOID names LPAREN declarations RPAREN block
Rule 29    return -> RETURN ID
Rule 30    return -> RETURN type
Rule 31    lambda_function -> LPAREN ID RPAREN ARROW expression
Rule 32    lambda_function -> LPAREN ID RPAREN ARROW block
Rule 33    expression -> object_access LPAREN expression RPAREN
Rule 34    expression -> object_access LPAREN RPAREN
Rule 35    if -> IF LPAREN logical_expression RPAREN block
Rule 36    if -> IF LPAREN logical_expression RPAREN block body
Rule 37    if -> IF LPAREN logical_expression RPAREN block elseif
Rule 38    if -> IF LPAREN logical_expression RPAREN block else
Rule 39    elseif -> ELSE IF LPAREN logical_expression RPAREN block
Rule 40    elseif -> ELSE IF LPAREN logical_expression RPAREN block elseif
Rule 41    elseif -> ELSE IF LPAREN logical_expression RPAREN block else
Rule 42    else -> ELSE block
Rule 43    else -> ELSE block body
Rule 44    loop -> while_loop
Rule 45    loop -> loop_for
Rule 46    loop_for -> FOR LPAREN assignment SEMICOLON logical_expression SEMICOLON assignment RPAREN block
Rule 47    loop_for -> FOR LPAREN assignment SEMICOLON logical_expression SEMICOLON assignment RPAREN block body
Rule 48    while_loop -> WHILE LPAREN logical_expression RPAREN block
Rule 49    while_loop -> WHILE LPAREN logical_expression RPAREN block body
Rule 50    logical_expression -> logical_factor logical_operator logical_expression
Rule 51    logical_expression -> logical_expression logical_operator logical_expression
Rule 52    logical_expression -> logical_factor
Rule 53    logical_factor -> TRUE
Rule 54    logical_factor -> FALSE
Rule 55    logical_factor -> ID
Rule 56    logical_factor -> indexing
Rule 57    logical_factor -> type
Rule 58    logical_factor -> object_access
Rule 59    logical_factor -> LPAREN logical_expression RPAREN
Rule 60    logical_operator -> OR
Rule 61    logical_operator -> AND
Rule 62    logical_operator -> NOT
Rule 63    logical_operator -> GREATER_THAN
Rule 64    logical_operator -> LESS_THAN
Rule 65    logical_operator -> GREATER_EQUALS_THAN
Rule 66    logical_operator -> LESS_EQUALS_THAN
Rule 67    logical_operator -> EQUALITY
Rule 68    data_structure -> data_structure_list
Rule 69    data_structure -> data_structure_array
Rule 70    data_structure_list -> LIST LESS_THAN data_type GREATER_THAN ID LSQBRACKET type RSQBRACKET
Rule 71    data_structure_array -> primitive LSQBRACKET RSQBRACKET
Rule 72    data_structure_array -> CLASSOBJECT LSQBRACKET RSQBRACKET
Rule 73    assignment -> data_type ID EQUALS expression
Rule 74    assignment -> ID EQUALS expression
Rule 75    assignment_class -> CLASSOBJECT ID
Rule 76    expression -> expression PLUS term
Rule 77    expression -> expression MINUS term
Rule 78    expression -> term
Rule 79    term -> term TIMES factor
Rule 80    term -> term DIVIDE factor
Rule 81    term -> factor
Rule 82    factor -> type
Rule 83    factor -> LPAREN expression RPAREN
Rule 84    factor -> object_access
Rule 85    factor -> ID
Rule 86    factor -> indexing
Rule 87    type -> FLOAT_TYPE
Rule 88    type -> DOUBLE_TYPE
Rule 89    type -> DECIMAL_TYPE
Rule 90    type -> INTEGER_TYPE
Rule 91    type -> MINUS type
Rule 92    declarations -> declaration
Rule 93    declarations -> declaration COMMA
Rule 94    declarations -> declaration COMMA declarations
Rule 95    declaration -> data_type ID
Rule 96    modifier -> PUBLIC
Rule 97    modifier -> PRIVATE
Rule 98    modifier -> PROTECTED
Rule 99    modifier -> INTERNAL
Rule 100   data_type -> primitive
Rule 101   data_type -> data_structure
Rule 102   primitive -> INT
Rule 103   primitive -> FLOAT
Rule 104   primitive -> BOOL
Rule 105   primitive -> BYTE
Rule 106   primitive -> CHAR
Rule 107   primitive -> SBYTE
Rule 108   primitive -> DECIMAL
Rule 109   primitive -> DOUBLE
Rule 110   primitive -> LONG
Rule 111   primitive -> SHORT
Rule 112   primitive -> UINT
Rule 113   indexing -> ID LSQBRACKET INTEGER_TYPE RSQBRACKET
Rule 114   indexing -> ID LSQBRACKET ID RSQBRACKET

Terminals, with rules where they appear

AND                  : 61
ARROW                : 31 32
BOOL                 : 104
BYTE                 : 105
CHAR                 : 106
CHARACTER            : 
CLASS                : 7 8
CLASSOBJECT          : 5 6 7 8 10 10 11 12 24 72 75
COMMA                : 93 94
DECIMAL              : 108
DECIMAL_TYPE         : 89
DIVIDE               : 80
DIVIDE_EQUAL         : 
DO                   : 
DOT                  : 9 10 11 12
DOUBLE               : 109
DOUBLE_TYPE          : 88
ELSE                 : 39 40 41 42 43
EQUALITY             : 67
EQUALS               : 73 74
FALSE                : 54
FILE                 : 
FLOAT                : 103
FLOAT_TYPE           : 87
FOR                  : 46 47
GREATER_EQUALS_THAN  : 65
GREATER_THAN         : 63 70
ID                   : 9 9 11 12 23 29 31 32 55 70 73 74 75 85 95 113 114 114
IF                   : 35 36 37 38 39 40 41
IN                   : 
INT                  : 102
INTEGER_TYPE         : 90 113
INTERNAL             : 99
LBRACKET             : 13
LESS_EQUALS_THAN     : 66
LESS_THAN            : 64 70
LIST                 : 70
LONG                 : 110
LPAREN               : 25 26 27 28 31 32 33 34 35 36 37 38 39 40 41 46 47 48 49 59 83
LSQBRACKET           : 70 71 72 113 114
MINUS                : 77 91
MINUS_EQUAL          : 
MODULE               : 
MODULE_EQUAL         : 
NAMESPACE            : 6
NEW                  : 
NINT                 : 
NOT                  : 62
NUINT                : 
OR                   : 60
PLUS                 : 76
PLUS_EQUAL           : 
PRIVATE              : 97
PROTECTED            : 98
PUBLIC               : 96
RBRACKET             : 13
RETURN               : 29 30
RPAREN               : 25 26 27 28 31 32 33 34 35 36 37 38 39 40 41 46 47 48 49 59 83
RSQBRACKET           : 70 71 72 113 114
SBYTE                : 107
SEMICOLON            : 5 6 14 15 46 46 47 47
SHORT                : 111
STATIC               : 8 27 28
STRING               : 
THEN                 : 
TIMES                : 79
TIMES_EQUAL          : 
TRUE                 : 53
UINT                 : 112
ULONG                : 
USHORT               : 
USING                : 5
VAR                  : 
VOID                 : 26 28
WHILE                : 48 49
error                : 

Nonterminals, with rules where they appear

assignment           : 19 46 46 47 47
assignment_class     : 
block                : 7 8 25 26 27 28 32 35 36 37 38 39 40 41 42 43 46 47 48 49
body                 : 13 15 36 43 47 49
class                : 1 2
data_structure       : 101
data_structure_array : 69
data_structure_list  : 68
data_type            : 25 27 70 73 95
declaration          : 21 92 93 94
declarations         : 25 26 27 28 94
else                 : 38 41
elseif               : 37 40
expression           : 20 31 33 73 74 76 77 83
factor               : 79 80 81
function             : 18
if                   : 16
indexing             : 56 86
lambda_function      : 
lines                : 14 15
logical_expression   : 35 36 37 38 39 40 41 46 47 48 49 50 51 51 59
logical_factor       : 50 52
logical_operator     : 50 51
loop                 : 17
loop_for             : 45
modifier             : 7 8 25 26 27 28
names                : 25 26 27 28
namespace            : 1 2
object_access        : 33 34 58 84
primitive            : 71 100
program              : 0
return               : 22
term                 : 76 77 78 79 80
type                 : 30 57 70 82 91
using                : 3 4
usings               : 1 3
while_loop           : 44

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . usings namespace class
    (2) program -> . namespace class
    (3) usings -> . using usings
    (4) usings -> . using
    (6) namespace -> . NAMESPACE CLASSOBJECT SEMICOLON
    (5) using -> . USING CLASSOBJECT SEMICOLON

    NAMESPACE       shift and go to state 5
    USING           shift and go to state 6

    program                        shift and go to state 1
    usings                         shift and go to state 2
    namespace                      shift and go to state 3
    using                          shift and go to state 4

state 1

    (0) S' -> program .



state 2

    (1) program -> usings . namespace class
    (6) namespace -> . NAMESPACE CLASSOBJECT SEMICOLON

    NAMESPACE       shift and go to state 5

    namespace                      shift and go to state 7

state 3

    (2) program -> namespace . class
    (7) class -> . modifier CLASS CLASSOBJECT block
    (8) class -> . modifier STATIC CLASS CLASSOBJECT block
    (96) modifier -> . PUBLIC
    (97) modifier -> . PRIVATE
    (98) modifier -> . PROTECTED
    (99) modifier -> . INTERNAL

    PUBLIC          shift and go to state 10
    PRIVATE         shift and go to state 11
    PROTECTED       shift and go to state 12
    INTERNAL        shift and go to state 13

    class                          shift and go to state 8
    modifier                       shift and go to state 9

state 4

    (3) usings -> using . usings
    (4) usings -> using .
    (3) usings -> . using usings
    (4) usings -> . using
    (5) using -> . USING CLASSOBJECT SEMICOLON

    NAMESPACE       reduce using rule 4 (usings -> using .)
    USING           shift and go to state 6

    using                          shift and go to state 4
    usings                         shift and go to state 14

state 5

    (6) namespace -> NAMESPACE . CLASSOBJECT SEMICOLON

    CLASSOBJECT     shift and go to state 15


state 6

    (5) using -> USING . CLASSOBJECT SEMICOLON

    CLASSOBJECT     shift and go to state 16


state 7

    (1) program -> usings namespace . class
    (7) class -> . modifier CLASS CLASSOBJECT block
    (8) class -> . modifier STATIC CLASS CLASSOBJECT block
    (96) modifier -> . PUBLIC
    (97) modifier -> . PRIVATE
    (98) modifier -> . PROTECTED
    (99) modifier -> . INTERNAL

    PUBLIC          shift and go to state 10
    PRIVATE         shift and go to state 11
    PROTECTED       shift and go to state 12
    INTERNAL        shift and go to state 13

    class                          shift and go to state 17
    modifier                       shift and go to state 9

state 8

    (2) program -> namespace class .

    $end            reduce using rule 2 (program -> namespace class .)


state 9

    (7) class -> modifier . CLASS CLASSOBJECT block
    (8) class -> modifier . STATIC CLASS CLASSOBJECT block

    CLASS           shift and go to state 18
    STATIC          shift and go to state 19


state 10

    (96) modifier -> PUBLIC .

    CLASS           reduce using rule 96 (modifier -> PUBLIC .)
    STATIC          reduce using rule 96 (modifier -> PUBLIC .)
    VOID            reduce using rule 96 (modifier -> PUBLIC .)
    INT             reduce using rule 96 (modifier -> PUBLIC .)
    FLOAT           reduce using rule 96 (modifier -> PUBLIC .)
    BOOL            reduce using rule 96 (modifier -> PUBLIC .)
    BYTE            reduce using rule 96 (modifier -> PUBLIC .)
    CHAR            reduce using rule 96 (modifier -> PUBLIC .)
    SBYTE           reduce using rule 96 (modifier -> PUBLIC .)
    DECIMAL         reduce using rule 96 (modifier -> PUBLIC .)
    DOUBLE          reduce using rule 96 (modifier -> PUBLIC .)
    LONG            reduce using rule 96 (modifier -> PUBLIC .)
    SHORT           reduce using rule 96 (modifier -> PUBLIC .)
    UINT            reduce using rule 96 (modifier -> PUBLIC .)
    LIST            reduce using rule 96 (modifier -> PUBLIC .)
    CLASSOBJECT     reduce using rule 96 (modifier -> PUBLIC .)


state 11

    (97) modifier -> PRIVATE .

    CLASS           reduce using rule 97 (modifier -> PRIVATE .)
    STATIC          reduce using rule 97 (modifier -> PRIVATE .)
    VOID            reduce using rule 97 (modifier -> PRIVATE .)
    INT             reduce using rule 97 (modifier -> PRIVATE .)
    FLOAT           reduce using rule 97 (modifier -> PRIVATE .)
    BOOL            reduce using rule 97 (modifier -> PRIVATE .)
    BYTE            reduce using rule 97 (modifier -> PRIVATE .)
    CHAR            reduce using rule 97 (modifier -> PRIVATE .)
    SBYTE           reduce using rule 97 (modifier -> PRIVATE .)
    DECIMAL         reduce using rule 97 (modifier -> PRIVATE .)
    DOUBLE          reduce using rule 97 (modifier -> PRIVATE .)
    LONG            reduce using rule 97 (modifier -> PRIVATE .)
    SHORT           reduce using rule 97 (modifier -> PRIVATE .)
    UINT            reduce using rule 97 (modifier -> PRIVATE .)
    LIST            reduce using rule 97 (modifier -> PRIVATE .)
    CLASSOBJECT     reduce using rule 97 (modifier -> PRIVATE .)


state 12

    (98) modifier -> PROTECTED .

    CLASS           reduce using rule 98 (modifier -> PROTECTED .)
    STATIC          reduce using rule 98 (modifier -> PROTECTED .)
    VOID            reduce using rule 98 (modifier -> PROTECTED .)
    INT             reduce using rule 98 (modifier -> PROTECTED .)
    FLOAT           reduce using rule 98 (modifier -> PROTECTED .)
    BOOL            reduce using rule 98 (modifier -> PROTECTED .)
    BYTE            reduce using rule 98 (modifier -> PROTECTED .)
    CHAR            reduce using rule 98 (modifier -> PROTECTED .)
    SBYTE           reduce using rule 98 (modifier -> PROTECTED .)
    DECIMAL         reduce using rule 98 (modifier -> PROTECTED .)
    DOUBLE          reduce using rule 98 (modifier -> PROTECTED .)
    LONG            reduce using rule 98 (modifier -> PROTECTED .)
    SHORT           reduce using rule 98 (modifier -> PROTECTED .)
    UINT            reduce using rule 98 (modifier -> PROTECTED .)
    LIST            reduce using rule 98 (modifier -> PROTECTED .)
    CLASSOBJECT     reduce using rule 98 (modifier -> PROTECTED .)


state 13

    (99) modifier -> INTERNAL .

    CLASS           reduce using rule 99 (modifier -> INTERNAL .)
    STATIC          reduce using rule 99 (modifier -> INTERNAL .)
    VOID            reduce using rule 99 (modifier -> INTERNAL .)
    INT             reduce using rule 99 (modifier -> INTERNAL .)
    FLOAT           reduce using rule 99 (modifier -> INTERNAL .)
    BOOL            reduce using rule 99 (modifier -> INTERNAL .)
    BYTE            reduce using rule 99 (modifier -> INTERNAL .)
    CHAR            reduce using rule 99 (modifier -> INTERNAL .)
    SBYTE           reduce using rule 99 (modifier -> INTERNAL .)
    DECIMAL         reduce using rule 99 (modifier -> INTERNAL .)
    DOUBLE          reduce using rule 99 (modifier -> INTERNAL .)
    LONG            reduce using rule 99 (modifier -> INTERNAL .)
    SHORT           reduce using rule 99 (modifier -> INTERNAL .)
    UINT            reduce using rule 99 (modifier -> INTERNAL .)
    LIST            reduce using rule 99 (modifier -> INTERNAL .)
    CLASSOBJECT     reduce using rule 99 (modifier -> INTERNAL .)


state 14

    (3) usings -> using usings .

    NAMESPACE       reduce using rule 3 (usings -> using usings .)


state 15

    (6) namespace -> NAMESPACE CLASSOBJECT . SEMICOLON

    SEMICOLON       shift and go to state 20


state 16

    (5) using -> USING CLASSOBJECT . SEMICOLON

    SEMICOLON       shift and go to state 21


state 17

    (1) program -> usings namespace class .

    $end            reduce using rule 1 (program -> usings namespace class .)


state 18

    (7) class -> modifier CLASS . CLASSOBJECT block

    CLASSOBJECT     shift and go to state 22


state 19

    (8) class -> modifier STATIC . CLASS CLASSOBJECT block

    CLASS           shift and go to state 23


state 20

    (6) namespace -> NAMESPACE CLASSOBJECT SEMICOLON .

    PUBLIC          reduce using rule 6 (namespace -> NAMESPACE CLASSOBJECT SEMICOLON .)
    PRIVATE         reduce using rule 6 (namespace -> NAMESPACE CLASSOBJECT SEMICOLON .)
    PROTECTED       reduce using rule 6 (namespace -> NAMESPACE CLASSOBJECT SEMICOLON .)
    INTERNAL        reduce using rule 6 (namespace -> NAMESPACE CLASSOBJECT SEMICOLON .)


state 21

    (5) using -> USING CLASSOBJECT SEMICOLON .

    USING           reduce using rule 5 (using -> USING CLASSOBJECT SEMICOLON .)
    NAMESPACE       reduce using rule 5 (using -> USING CLASSOBJECT SEMICOLON .)


state 22

    (7) class -> modifier CLASS CLASSOBJECT . block
    (13) block -> . LBRACKET body RBRACKET

    LBRACKET        shift and go to state 25

    block                          shift and go to state 24

state 23

    (8) class -> modifier STATIC CLASS . CLASSOBJECT block

    CLASSOBJECT     shift and go to state 26


state 24

    (7) class -> modifier CLASS CLASSOBJECT block .

    $end            reduce using rule 7 (class -> modifier CLASS CLASSOBJECT block .)


state 25
